umami/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: trust-forwarded-headers
  namespace: umami
spec:
  ipAllowList:
    sourceRange:
      - "0.0.0.0/0"
