umami/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: umami
  namespace: umami
  annotations:
    keel.sh/policy: force
    keel.sh/pollSchedule: "@every 24h"
    keel.sh/trigger: poll
spec:
  replicas: 2
  selector:
    matchLabels:
      app: umami
  template:
    metadata:
      labels:
        app: umami
    spec:
      containers:
        - name: umami
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
          image: ghcr.io/umami-software/umami:postgresql-latest
          ports:
            - containerPort: 5000
              protocol: TCP
          imagePullPolicy: Always
