umami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: umami
  namespace: umami
spec:
  selector:
    app: umami
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
