umami/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: umami-ingress
  namespace: umami
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`analytics.cngei.it`)
      middlewares:
        - name: trust-forwarded-headers
      services:
        - kind: Service
          name: umami
          port: 5000
  tls:
    secretName: umami-tls
